hphp/hack/test/typecheck/assign_to_function_invocation.php.exp
File "assign_to_function_invocation.php", line 4, characters 19-32:
Assignments can no longer be used as expressions. Pull the assignment out into a separate statement. (Parsing[1002])
